--- a/fastai_1_stopwords_lemm_svd_nmf.ipynb
+++ b/fastai_1_stopwords_lemm_svd_nmf.ipynb
@@ -882,7 +882,7 @@
     "=> the vocab will be important to a document if it appears several time in that document, but rarely appears in other documents\n",
     "\n",
     "\n",
-    "This is a better version of bag-of-words. And of course it doesn't take into acount order of words"
+    "This is a better version of bag-of-words. But similarly to BOW, it doesn't take into acount order of words"
    ]
   },
   {
@@ -921,7 +921,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# use this new bag-of-words matrix for NMF\n",
     "W1 = clf.fit_transform(vectors_tfidf)\n",
     "H1 = clf.components_ # topic vs vocab"
    ]
@@ -1099,7 +1098,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
