--- a/toxic_NB_LR.ipynb
+++ b/toxic_NB_LR.ipynb
@@ -2,14 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Combining Naive Bayes and Logistic Regression on Toxic dataset"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Steps:\n",
     "\n",
@@ -24,7 +28,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -34,21 +40,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 16,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "import json\n",
     "from matplotlib import patches, patheffects\n",
-    "from fastai.dataset import *\n",
-    "import seaborn as sns"
+    "# from fastai.dataset import *\n",
+    "import seaborn as sns\n",
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.feature_extraction.text import CountVectorizer"
@@ -56,8 +68,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "PATH = Path('data/toxic')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -123,7 +148,7 @@
        "4  00017695ad8997eb          I don't anonymously edit articles at all."
       ]
      },
-     "execution_count": 31,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,8 +160,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -245,21 +272,44 @@
        "4             0        0       0       0              0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "PATH = Path('data/toxic')\n",
     "df = pd.read_csv(PATH/'train.csv')\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(159571, 8)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "labels=df.columns[2:].values"
@@ -267,8 +317,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['toxic', 'severe_toxic', 'obscene', 'threat', 'insult',\n",
+       "       'identity_hate'], dtype=object)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "def trn_val_idxs(n,val_size=.2):\n",
@@ -281,8 +356,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 17,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "trn_idx,val_idx = trn_val_idxs(df.shape[0])"
@@ -290,8 +367,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 18,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "train_df,val_df = df.iloc[trn_idx],df.iloc[val_idx]"
@@ -300,7 +379,9 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -334,7 +415,9 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -366,8 +449,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 19,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# tokenize function\n",
@@ -385,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,32 +481,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(127657, 800000)"
+       "(127657, 500000)"
       ]
      },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(31914, 800000)"
-      ]
-     },
-     "execution_count": 12,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "trn_bag.shape\n",
+    "trn_bag.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(31914, 500000)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "val_bag.shape"
    ]
   },
@@ -434,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,22 +540,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "toxic val acc: 0.83670\n",
-      "severe_toxic val acc: 0.90852\n",
-      "obscene val acc: 0.89033\n",
-      "threat val acc: 0.75765\n",
-      "insult val acc: 0.89667\n",
-      "identity_hate val acc: 0.92789\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "vec = CountVectorizer(tokenizer=tokenize,ngram_range=(1,2), max_features = 100000)\n",
     "trn_bag = vec.fit_transform(train_df.comment_text)\n",
@@ -483,53 +564,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Tuning hyperparam"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "toxic val acc: 0.85239\n",
-      "severe_toxic val acc: 0.94118\n",
-      "obscene val acc: 0.90529\n",
-      "threat val acc: 0.95202\n",
-      "insult val acc: 0.91143\n",
-      "identity_hate val acc: 0.96837\n"
-     ]
-    }
-   ],
-   "source": [
-    "vec = CountVectorizer(tokenizer=tokenize,ngram_range=(1,2), max_features = 10000)\n",
-    "trn_bag = vec.fit_transform(train_df.comment_text)\n",
-    "val_bag = vec.transform(val_df.comment_text)\n",
-    "x=trn_bag\n",
-    "# Accuracy for each labels\n",
-    "for label in labels:\n",
-    "    y = train_df[label].values\n",
-    "    r = np.log(pr(x,y,1) / pr(x,y,0))\n",
-    "    b = np.log((y==1).mean() / (y==0).mean())\n",
-    "    val_preds= val_bag @ r.T + b\n",
-    "    val_preds = val_preds > 0\n",
-    "    \n",
-    "#     trn_preds= x @ r.T + b\n",
-    "#     trn_preds = trn_preds > 0\n",
-    "    \n",
-    "    y_val = val_df[label].values\n",
-    "    print(f'{label} val acc: {(val_preds == y_val).mean():0.5f}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,25 +592,14 @@
     "        # get prob of class 1\n",
     "        preds = preds / (1 + preds)\n",
     "        sub[label] = preds\n",
-    "    return sub\n",
-    "        \n",
-    "        "
+    "    return sub"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/quantran/anaconda3/envs/fastai/lib/python3.6/site-packages/ipykernel_launcher.py:20: RuntimeWarning: overflow encountered in exp\n",
-      "/home/quantran/anaconda3/envs/fastai/lib/python3.6/site-packages/ipykernel_launcher.py:22: RuntimeWarning: invalid value encountered in true_divide\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sub = test_nb_submission(df,500000)\n",
     "sub.fillna(0,inplace=True)\n",
