--- a/s1/exploring_word_vectors.ipynb
+++ b/s1/exploring_word_vectors.ipynb
@@ -180,18 +180,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Plotting Co-Occurrence Word Embeddings"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Here, we will be using the Reuters (business and financial news) corpus. If you haven't run the import cell at the top of this page, please run it now (click it and press SHIFT-RETURN). The corpus consists of 10,788 news documents totaling 1.3 million words. These documents span 90 categories and are split into train and test. For more details, please see https://www.nltk.org/book/ch02.html. We provide a `read_corpus` function below that pulls out only articles from the \"crude\" (i.e. news articles about oil, gas, etc.) category. The function also adds `<START>` and `<END>` tokens to each of the documents, and lowercases words. You do **not** have to perform any other kind of pre-processing."
    ]
@@ -199,9 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def read_corpus(category=\"crude\"):\n",
@@ -217,9 +211,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Let's have a look what these documents are like…."
    ]
@@ -227,9 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "reuters_corpus = read_corpus()"
@@ -238,9 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -260,9 +248,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Question 1.1: Implement `distinct_words` [code] (2 points)\n",
     "\n",
@@ -274,9 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "a=[[1,2,1],[1,2,3]]\n"
@@ -285,9 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -307,9 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def distinct_words(corpus):\n",
@@ -332,9 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -701,9 +679,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Question 1.5: Co-Occurrence Plot Analysis [written] (3 points)\n",
     "\n",
@@ -721,9 +697,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -746,9 +720,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -768,9 +740,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -799,9 +769,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "- The 3 countries are together\n",
     "- barrels and oil/petroleum are not\n",
@@ -810,9 +778,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### try TFIDF and SVD/truncated SVD/NMF for word embedding"
    ]
@@ -820,9 +786,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer"
@@ -831,9 +795,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "temp2 = [' '.join([w.lower() for w in list(reuters.words(f))]) for f in reuters.fileids(\"crude\")]"
@@ -842,9 +804,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "tfidf = TfidfVectorizer(stop_words='english')\n",
@@ -854,9 +814,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -875,9 +833,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "#### truncated SVD"
    ]
@@ -885,9 +841,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -905,9 +859,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -927,9 +879,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -949,9 +899,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "word2Ind_tfidf = {v:k for k,v in enumerate(tfidf.get_feature_names())}"
@@ -960,9 +908,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -988,9 +934,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Note that this is document-based embeddings. \n",
     "- Oil and petroleum are together\n",
@@ -1000,9 +944,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "#### NMF"
    ]
@@ -1010,9 +952,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn import decomposition"
@@ -1021,9 +961,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "clf = decomposition.NMF(n_components=2, random_state=1)"
@@ -1032,9 +970,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "W1 = clf.fit_transform(tf_mat)\n",
@@ -1044,9 +980,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1066,9 +1000,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1088,9 +1020,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1116,9 +1046,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Interesting..."
    ]
@@ -1136,16 +1064,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### GLOVE: combining the ideas of co-occurence count matrix and neural network method."
+    "### GLOVE: combining the ideas of co-occurence count matrix and neural network method (from skip-gram)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Main idea: ratio of 2 co-occurence probabilities can encode **linear meaning components in a word vector space**\n",
+    "Main idea: ratio of 2 co-occurence probabilities can encode **linear meaning components (see below) in a word vector space**\n",
     "\n",
-    "By setting dot products equal to log of co-occurence probability, this can happen"
+    "By setting dot products (of 2 word vectors) equal to log of co-occurence probability, this can happen"
    ]
   },
   {
@@ -1159,7 +1087,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note: left side (wa-wb) is the linear meaning (can add/subtract), right side is the (log) ratio of 2 probabilities"
+    "Note: left side (wa-wb) is the linear meaning of 2 word vector in a word vector space (can add/subtract), right side is the (log) ratio of 2 probabilities"
    ]
   },
   {
@@ -1387,9 +1315,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Question 2.1: GloVe Plot Analysis [written] (4 points)\n",
     "\n",
@@ -1402,7 +1328,6 @@
    "cell_type": "code",
    "execution_count": 45,
    "metadata": {
-    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -1426,9 +1351,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "- Oil and petroleum are closer (compared to co-occurence mat)\n",
     "- kuwait is further from other 2 countries\n",
@@ -1437,18 +1360,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Cosine Similarity"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Now that we have word vectors, we need a way to quantify the similarity between individual words, according to these vectors. One such metric is cosine-similarity. We will be using this to find words that are \"close\" and \"far\" from one another.\n",
     "\n",
@@ -1463,18 +1382,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Question 2.2: Words with Multiple Meanings (2 points) [code + written] "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Polysemes and homonyms are words that have more than one meaning (see this [wiki page](https://en.wikipedia.org/wiki/Polysemy) to learn more about the difference between polysemes and homonyms ). \n",
     "\n",
@@ -1488,9 +1403,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1519,9 +1432,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1549,9 +1460,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "**Why do you think many of the polysemous or homonymic words you tried didn't work (i.e. the top-10 most similar words only contain one of the meanings of the words)?**: maybe it depends on the categories of corpus it trains from. With lack of information about a second meaning of a word, word2vec/glove won't be able to pick it up."
    ]
@@ -1928,9 +1837,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Question 2.6: Guided Analysis of Bias in Word Vectors [written] (1 point)\n",
     "\n",
@@ -1942,9 +1849,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1982,9 +1887,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Man to manager is woman to assistant, but when the opposite to applied, man is now boss, managing ..."
    ]
@@ -2006,7 +1909,7 @@
     "\n",
     "Skipgram:\n",
     "- Pros: improve performance (compared to co-occurence), and can capture complex patterns (not just similarity)\n",
-    "- Cons: scales with corpus size (?) and don't use much stats"
+    "- Cons: scales with corpus size (?) and don't use much stats (use probability though)"
    ]
   },
   {
@@ -2664,15 +2567,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# test another method to calculate the transformation vector\n",
-    "temp = np.array([wv_from_bin.word_vec(w) for w,d in wv_from_bin.most_similar('alreay',topn=8)])\n",
-    "temp_mean = wv_from_bin.word_vec('already') - np.mean(temp,axis=0)\n",
+    "# # test another method to calculate the transformation vector\n",
+    "# temp = np.array([wv_from_bin.word_vec(w) for w,d in wv_from_bin.most_similar('alreay',topn=8)])\n",
+    "# temp_mean = wv_from_bin.word_vec('already') - np.mean(temp,axis=0)\n",
     "\n",
-    "wv_from_bin.similar_by_vector(temp_mean + wv_from_bin.word_vec('alreay'))\n",
+    "# wv_from_bin.similar_by_vector(temp_mean + wv_from_bin.word_vec('alreay'))\n",
     "\n",
-    "wv_from_bin.similar_by_vector(temp_mean + wv_from_bin.word_vec('analaysts'))\n",
+    "# wv_from_bin.similar_by_vector(temp_mean + wv_from_bin.word_vec('analaysts'))\n",
     "\n",
-    "wv_from_bin.similar_by_vector(temp_mean + wv_from_bin.word_vec('likley'))"
+    "# wv_from_bin.similar_by_vector(temp_mean + wv_from_bin.word_vec('likley'))"
    ]
   },
   {
@@ -2709,7 +2612,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
