--- a/stanford_w2c_formula_and_params.ipynb
+++ b/stanford_w2c_formula_and_params.ipynb
@@ -191,7 +191,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "or: derivative of P(n|c) = nn - sum-w-in-vocab( P(w|c) ) * wn\n",
+    "or: derivative of P(n|c) = nn - sum-w-in-vocab( P(w|c) * wn )\n",
     "\n",
     "Notice that this derivative is fairly easy to calculate, thus more practical, **because we use 2 matrices: center and neighbor**"
    ]
@@ -214,7 +214,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Note**: pay attention to the denominator of P(n|c) above, and you can see we are adding the entire vocabulary in order to calculate probability of a set of center word and neighbor word => extremely slow to go through the corpus with this calculation\n",
+    "**Cons of normal w2v skip-gram**: pay attention to the denominator of P(n|c) above, and you can see we are adding the entire vocabulary in order to calculate probability of a set of center word and neighbor word => extremely slow to go through the corpus with this calculation\n",
     "\n",
     "=> Solution: **negative sampling**: train **binary logistic regression** (TODO: binary? with the way sigmoid is used, this is more like multiclass classification) for:\n",
     "- a **true pair** (neighbor word and center word). We want this probability (after applying sigmoid) to be high\n",
@@ -237,9 +237,9 @@
     "That is a **sigmoid function** as in sigmoid(uoT @ vc).\n",
     "\n",
     "**Question on the loss function:**\n",
-    "- How the sample K words (the negative sample)? => start with unigram distribution\n",
+    "- How to sample K words (the negative sample)? => start with unigram distribution\n",
     "\n",
-    "- Why the negative in the dot product before sigmoid (in K sum)? The negative before sigmoid is equivalent to  1 - probability, so as we want this dot product of the negative sample to be small => probability (b/c of neg and sigmoid) will be big => log small. \n",
+    "- Why the negative before the dot product inside sigmoid (in K sum)? The negative inside sigmoid is equivalent to  1 - probability, so as we want this dot product of the negative sample to be small => probability (b/c of neg and sigmoid) will be big => log small. \n",
     "    - And for the first term (for the real pair), we want big dot product => big sigmoid => big probability so that log will close to 0 (small). Remember that I am describing best case scenario for these 2 terms, plus that our objective is to minimize this loss! "
    ]
   },
@@ -284,7 +284,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
