--- a/fastai_2_nb_logisticregression.ipynb
+++ b/fastai_2_nb_logisticregression.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
        "[PosixPath('/home/quantran/.fastai/data/imdb_sample/texts.csv')]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
        "4  negative  This movie succeeds at being one of the most u...     False"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -202,8 +202,8 @@
      "text": [
       "failure count is 0\n",
       "\n",
-      "CPU times: user 152 ms, sys: 64.7 ms, total: 216 ms\n",
-      "Wall time: 1.23 s\n"
+      "CPU times: user 169 ms, sys: 35.6 ms, total: 204 ms\n",
+      "Wall time: 1.31 s\n"
      ]
     }
    ],
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
        "fastai.data_block.LabelLists"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -305,7 +305,7 @@
        "Path: /home/quantran/.fastai/data/imdb_sample"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -327,7 +327,7 @@
        "(800, 200)"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +347,7 @@
        "(fastai.data_block.LabelList, fastai.text.data.TextList)"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
        "Path: /home/quantran/.fastai/data/imdb_sample"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
        " fastai.text.data.Text)"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
        "array([   2,    5, 4619,   25, ...,   10,    5,    0,   52])"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
        " 'movie']"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
        "24"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +545,7 @@
        "(19161, 6008)"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +567,7 @@
        "[[], [], [], [], [], [], [], [], []]"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +599,7 @@
        "'xxunk'"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -626,7 +626,7 @@
        " ['xxwrep']]"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +646,7 @@
        "13153"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +666,7 @@
        "True"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +693,7 @@
        "dict_items([(2, 1), (5, 15), (4619, 1), (25, 3), (0, 8), (867, 1), (52, 5), (3776, 1), (1800, 1), (95, 1), (37, 1), (85, 1), (191, 1), (64, 2), (935, 1), (2738, 1), (517, 1), (18, 1), (21, 3), (11, 1), (84, 1), (2417, 1), (192, 1), (88, 1), (3777, 1), (1801, 1), (127, 1), (10, 3), (269, 1), (15, 1), (273, 1), (73, 1), (26, 2), (9, 2), (1360, 1), (35, 2), (1213, 1), (1144, 1), (1145, 1), (2418, 1), (91, 1), (63, 1), (245, 1), (14, 2), (1361, 1), (1447, 1), (65, 1), (40, 1), (796, 1), (103, 1), (72, 2), (99, 1), (534, 1), (616, 1), (48, 1), (282, 1), (54, 1), (90, 1), (219, 1), (228, 1), (43, 1), (13, 1), (3778, 1), (3779, 1), (355, 1), (492, 1)])"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -721,8 +721,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 1: get vector of (# of vocabs) length"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -741,23 +748,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
     "def count_vectorizer(review_index,n_terms = n_terms,make_token_counter = make_token_counter):\n",
     "    # input: review index, n_terms, and tokenizer function\n",
     "    # output: embedding vector for the review\n",
-    "    embedding_vector = np.zeros(n_terms)        \n",
-    "    keys = list(make_token_counter(review_index).keys())\n",
-    "    values = list(make_token_counter(review_index).values())\n",
+    "    embedding_vector = np.zeros(n_terms,dtype=np.int16)   \n",
+    "    token_counter = make_token_counter(review_index)\n",
+    "    keys = list(token_counter.keys())\n",
+    "    values = list(token_counter.values())\n",
     "    embedding_vector[keys] = values\n",
     "    return embedding_vector"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -767,7 +775,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 8,  0,  1,  0,  0, 15,  0,  0,  0,  2,  3,  1,  0,  1,  2,  1,  0,  0,  1,  0], dtype=int16)"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "embedding_vector[:20]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -776,13 +804,339 @@
        "6008"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "len(embedding_vector)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 2: build the matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_full_doc_term_matrix(count_vectorizer,n_terms=n_terms,n_docs=n_docs):\n",
+    "    \n",
+    "    # loop through the movie reviews\n",
+    "    for doc_index in range(n_docs):\n",
+    "        \n",
+    "        # make the embedding vector for the current review\n",
+    "        embedding_vector = count_vectorizer(doc_index,n_terms)    \n",
+    "            \n",
+    "        # append the embedding vector to the document-term matrix\n",
+    "        if(doc_index == 0):\n",
+    "            A = embedding_vector\n",
+    "        else:\n",
+    "            A = np.vstack((A,embedding_vector))\n",
+    "            \n",
+    "    # return the document-term matrix\n",
+    "    return A\n",
+    "\n",
+    "# Build the full document term matrix for the movie_reviews training set\n",
+    "A = make_full_doc_term_matrix(count_vectorizer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(800, 6008)"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4806400"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A.size"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Build a sparse matrix in CSR format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "embedding_vector = count_vectorizer(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([   0,    2,    5,    9, ..., 3777, 3778, 3779, 4619])"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "embedding_vector.nonzero()[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(800, 6008)"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n_docs,n_terms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def doc_term_matrix_csr_scratch(count_vectorizer,n_terms=n_terms,n_docs=n_docs):\n",
+    "    \n",
+    "    values,col_indices,row_pter=[],[],[0]\n",
+    "    \n",
+    "    # loop through the movie reviews\n",
+    "    for doc_index in range(n_docs):\n",
+    "        \n",
+    "        # make the embedding vector for the current review\n",
+    "        emb_vector = count_vectorizer(doc_index,n_terms)\n",
+    "        emb_nonzero = emb_vector.nonzero()[0]\n",
+    "        row_pter.append(row_pter[-1] + len(emb_nonzero))\n",
+    "        for nzi in emb_nonzero:\n",
+    "            values.append(emb_vector[nzi])\n",
+    "            col_indices.append(nzi)\n",
+    "    \n",
+    "            \n",
+    "    # CSR format sparse matrix representation \n",
+    "    return (values,col_indices,row_pter)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "csr = doc_term_matrix_csr_scratch(count_vectorizer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[112405, 112405, 801]"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(map(len,csr))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# construct the document-term matrix in CSR format\n",
+    "# i.e. return (values, column_indices, row_pointer)\n",
+    "def get_doc_term_matrix(text_list, n_terms):\n",
+    "    \n",
+    "    # inputs:\n",
+    "    #    text_list, a TextList object\n",
+    "    #    n_terms, the number of tokens in our IMDb vocabulary\n",
+    "    \n",
+    "    # output: \n",
+    "    #    the CSR format sparse representation of the document-term matrix in the form of a\n",
+    "    #    scipy.sparse.csr.csr_matrix object\n",
+    "\n",
+    "    \n",
+    "    # initialize arrays\n",
+    "    values = []\n",
+    "    column_indices = []\n",
+    "    row_pointer = []\n",
+    "    row_pointer.append(0)\n",
+    "\n",
+    "    # from the TextList object\n",
+    "    for _, doc in enumerate(text_list):\n",
+    "        feature_counter = Counter(doc.data)\n",
+    "        column_indices.extend(feature_counter.keys())\n",
+    "        values.extend(feature_counter.values())\n",
+    "        # Tack on N (number of nonzero elements in the matrix) to the end of the row_pointer array\n",
+    "        row_pointer.append(len(values))\n",
+    "        \n",
+    "    return scipy.sparse.csr_matrix((values, column_indices, row_pointer),\n",
+    "                                   shape=(len(row_pointer) - 1, n_terms),\n",
+    "                                   dtype=int),(values, column_indices, row_pointer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 117 ms, sys: 13 ms, total: 130 ms\n",
+      "Wall time: 124 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "train_doc_term,csr_correct = get_doc_term_matrix(movie_reviews.train.x, len(movie_reviews.vocab.itos))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[112405, 112405, 801]"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(map(len,csr_correct))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def CSR_to_full_scratch(values, col_indices, row_ptr, m,n):\n",
+    "    A = np.zeros((m,n),dtype=np.int16)\n",
+    "    for i in range(m):\n",
+    "        A[i, col_indices[row_ptr[i]:row_ptr[i+1]] ] = values[row_ptr[i]:row_ptr[i+1]]\n",
+    "    return A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(800, 6008)"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n_docs,n_terms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "csr_full = CSR_to_full_scratch(*csr,n_docs,n_terms)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# test if this is the same as \n",
+    "sum(sum(csr_full == A)) == A.shape[0]*A.shape[1] # correct"
    ]
   }
  ],
