halfway through s2, fuck this is hard as fuck

--- a/stanford_w2v_formula_and_params.ipynb
+++ b/stanford_w2v_formula_and_params.ipynb
@@ -234,6 +234,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "In my words:\n",
+    "\n",
+    "$$\n",
+    "L_{neg sample}(n,c) = - log(\\frac{1}{1+e^{-n_{n}@c_{c} }} ) - sum(log(\\frac{1}{1+e^{w_{1n}@c_{c} }}),log(\\frac{1}{1+e^{w_{2n}@c_{c} }}), ..., log(\\frac{1}{1+e^{w_{kn}@c_{c} }}))\n",
+    "$$\n",
+    "\n",
+    "w1, w2 ... wk: k negative samples (words) are drawn from the vocabulary. Neighbor word n is NOT in this k samples"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "That is a **sigmoid function** as in sigmoid(uoT @ vc).\n",
     "\n",
     "**Question on the loss function:**\n",
