--- a/s2/ex2-w2v-with-neg-sampling-sgd.ipynb
+++ b/s2/ex2-w2v-with-neg-sampling-sgd.ipynb
@@ -42,14 +42,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Naive softmax w2v"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Convert the loss function into negative logloss convention\n",
     "\n",
@@ -61,7 +65,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "from IPython.core.debugger import set_trace\n",
@@ -146,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,8 +169,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](../images/w2v_implementation.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Bonus: gradient of log(sigmoid(f(x)) and comparing between log(sigmoid()) and log(sofmax())\n",
+    "\n",
+    "![](../images/logsiggrad.jpg)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +200,7 @@
     "    \"\"\" Negative sampling loss function for word2vec models\n",
     "\n",
     "    Implement the negative sampling loss and gradients for a centerWordVec\n",
-    "    and a outsideWordIdx word vector as a building block for word2vec\n",
+    "    and an outsideWordIdx word vector as a building block for word2vec\n",
     "    models. K is the number of negative samples to take.\n",
     "\n",
     "    Note: The same word may be negatively sampled multiple times. For\n",
@@ -226,9 +248,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
+    "## Skipgram implementation for 1 center word"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 154,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "def skipgram(currentCenterWord, windowSize, outsideWords, word2Ind,\n",
@@ -246,10 +279,10 @@
     "              the word vector list\n",
     "    centerWordVectors -- center word vectors (as rows) is in shape \n",
     "                        (num words in vocab, word vector length) \n",
-    "                        for all words in vocab (V in pdf handout)\n",
+    "                        for all words in vocab (V in pdf handout, C in note)\n",
     "    outsideVectors -- outside vectors is in shape \n",
     "                        (num words in vocab, word vector length) \n",
-    "                        for all words in vocab (U in the pdf handout)\n",
+    "                        for all words in vocab (U in the pdf handout, N in note)\n",
     "    word2vecLossAndGradient -- the loss and gradient function for\n",
     "                               a prediction vector given the outsideWordIdx\n",
     "                               word vectors, could be one of the two\n",
@@ -258,8 +291,8 @@
     "    Return:\n",
     "    loss -- the loss function value for the skip-gram model\n",
     "            (J in the pdf handout)\n",
-    "    gradCenterVec -- the gradient with respect to the center word vector\n",
-    "                     in shape (word vector length, )\n",
+    "    gradCenterVecs -- the gradient with respect to all the center word vectors\n",
+    "                     in shape (num words in vocab, word vector length) \n",
     "                     (dJ / dv_c in the pdf handout)\n",
     "    gradOutsideVecs -- the gradient with respect to all the outside word vectors\n",
     "                    in shape (num words in vocab, word vector length) \n",
@@ -283,9 +316,22 @@
     "        gradOutsideVectors += one_gradOutside\n",
     "    ### END YOUR CODE\n",
     "    \n",
-    "    return loss, gradCenterVecs, gradOutsideVectors\n",
-    "\n",
-    "\n",
+    "    return loss, gradCenterVecs, gradOutsideVectors"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Testing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#############################################\n",
     "# Testing functions below. DO NOT MODIFY!   #\n",
     "#############################################\n",
@@ -348,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 7,
    "metadata": {
     "scrolled": false
    },
@@ -379,8 +425,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# SGD"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,9 +472,15 @@
     "    params_file = \"saved_params_%d.npy\" % iter\n",
     "    np.save(params_file, params)\n",
     "    with open(\"saved_state_%d.pickle\" % iter, \"wb\") as f:\n",
-    "        pickle.dump(random.getstate(), f)\n",
-    "\n",
-    "\n",
+    "        pickle.dump(random.getstate(), f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def sgd(f, x0, step, iterations, postprocessing=None, useSaved=False,\n",
     "        PRINT_EVERY=10):\n",
     "    \"\"\" Stochastic Gradient Descent\n",
@@ -470,7 +529,8 @@
     "\n",
     "        loss = None\n",
     "        ### YOUR CODE HERE (~2 lines)\n",
-    "\n",
+    "        loss, grad = f(x)\n",
+    "        x -= step * grad\n",
     "        ### END YOUR CODE\n",
     "\n",
     "        x = postprocessing(x)\n",
@@ -487,9 +547,15 @@
     "        if iter % ANNEAL_EVERY == 0:\n",
     "            step *= 0.5\n",
     "\n",
-    "    return x\n",
-    "\n",
-    "\n",
+    "    return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def sanity_check():\n",
     "    quad = lambda x: (np.sum(x ** 2), x * 2)\n",
     "\n",
@@ -513,9 +579,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running sanity checks...\n",
+      "iter 100: 0.004578\n",
+      "iter 200: 0.004353\n",
+      "iter 300: 0.004136\n",
+      "iter 400: 0.003929\n",
+      "iter 500: 0.003733\n",
+      "iter 600: 0.003546\n",
+      "iter 700: 0.003369\n",
+      "iter 800: 0.003200\n",
+      "iter 900: 0.003040\n",
+      "iter 1000: 0.002888\n",
+      "test 1 result: 8.414836786079764e-10\n",
+      "iter 100: 0.000000\n",
+      "iter 200: 0.000000\n",
+      "iter 300: 0.000000\n",
+      "iter 400: 0.000000\n",
+      "iter 500: 0.000000\n",
+      "iter 600: 0.000000\n",
+      "iter 700: 0.000000\n",
+      "iter 800: 0.000000\n",
+      "iter 900: 0.000000\n",
+      "iter 1000: 0.000000\n",
+      "test 2 result: 0.0\n",
+      "iter 100: 0.041205\n",
+      "iter 200: 0.039181\n",
+      "iter 300: 0.037222\n",
+      "iter 400: 0.035361\n",
+      "iter 500: 0.033593\n",
+      "iter 600: 0.031913\n",
+      "iter 700: 0.030318\n",
+      "iter 800: 0.028802\n",
+      "iter 900: 0.027362\n",
+      "iter 1000: 0.025994\n",
+      "test 3 result: -2.524451035823933e-09\n",
+      "----------------------------------------\n",
+      "ALL TESTS PASSED\n",
+      "----------------------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "sanity_check()"
    ]
