minor note on regex

--- a/fastai_2_nb_logisticregression.ipynb
+++ b/fastai_2_nb_logisticregression.ipynb
@@ -202,8 +202,8 @@
      "text": [
       "failure count is 0\n",
       "\n",
-      "CPU times: user 169 ms, sys: 35.6 ms, total: 204 ms\n",
-      "Wall time: 1.31 s\n"
+      "CPU times: user 161 ms, sys: 47.2 ms, total: 208 ms\n",
+      "Wall time: 1.34 s\n"
      ]
     }
    ],
@@ -748,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -784,7 +784,7 @@
        "array([ 8,  0,  1,  0,  0, 15,  0,  0,  0,  2,  3,  1,  0,  1,  2,  1,  0,  0,  1,  0], dtype=int16)"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -795,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -804,7 +804,7 @@
        "6008"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -822,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -858,7 +858,7 @@
        "(800, 6008)"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -869,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -878,7 +878,7 @@
        "4806400"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -896,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -905,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -914,7 +914,7 @@
        "array([   0,    2,    5,    9, ..., 3777, 3778, 3779, 4619])"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -925,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -934,7 +934,7 @@
        "(800, 6008)"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -945,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -972,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -981,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -990,7 +990,7 @@
        "[112405, 112405, 801]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1001,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1039,14 +1039,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 117 ms, sys: 13 ms, total: 130 ms\n",
+      "CPU times: user 121 ms, sys: 8.1 ms, total: 129 ms\n",
       "Wall time: 124 ms\n"
      ]
     }
@@ -1058,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1067,7 +1067,7 @@
        "[112405, 112405, 801]"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1078,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1091,7 +1091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1100,7 +1100,7 @@
        "(800, 6008)"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1111,7 +1111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1120,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1129,7 +1129,7 @@
        "True"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1141,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1150,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1159,22 +1159,13 @@
        "True"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "sum(sum(csr_full == csr_correct_full)) == csr_correct_full.shape[0]*csr_correct_full.shape[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "csr_full[]"
    ]
   },
   {
@@ -1186,15 +1177,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 32 ms, sys: 631 µs, total: 32.6 ms\n",
-      "Wall time: 31.1 ms\n"
+      "CPU times: user 30.3 ms, sys: 3.55 ms, total: 33.9 ms\n",
+      "Wall time: 33.1 ms\n"
      ]
     }
    ],
@@ -1212,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1221,7 +1212,7 @@
        "211"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1232,15 +1223,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 2  5 21 71 ... 15  5  0 52]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([ 2,  5, 21, 71, ..., 15,  5,  0, 52])"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1249,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1258,7 +1252,7 @@
        "('xxmaj', 'to', '!')"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1269,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1284,13 +1278,355 @@
        "  xxmaj welcome to xxmaj xxunk !"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "movie_reviews.valid.x[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<200x6008 sparse matrix of type '<class 'numpy.int64'>'\n",
+       "\twith 27848 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "valid_doc_term"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Naive Bayes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['negative', 'positive']"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movie_reviews.y.classes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "positive = movie_reviews.y.c2i['positive']\n",
+    "negative = movie_reviews.y.c2i['negative']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 0)"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "positive,negative"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = train_doc_term\n",
+    "y = movie_reviews.train.y\n",
+    "valid_y = movie_reviews.valid.y\n",
+    "v = movie_reviews.vocab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<800x6008 sparse matrix of type '<class 'numpy.int64'>'\n",
+       "\twith 112405 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The count arrays C1 and C0 list the total occurrence counts of the tokens in positive and negative reviews, respectively.¶\n",
+    "\n",
+    "C1 = np.squeeze(np.asarray(x[y.items==positive].sum(0)))\n",
+    "C0 = np.squeeze(np.asarray(x[y.items==negative].sum(0)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "L1 = (C1+1) / ((y.items==positive).sum() + 1)\n",
+    "L0 = (C0+1) / ((y.items==negative).sum() + 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-0.015487  0.084839  0.        0.084839 ...  1.471133 -1.301455 -1.301455 -1.301455]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "R = np.log(L1/L0)\n",
+    "print(R)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_tokens = 10\n",
+    "# highest_R = np.argpartition(R, -n_tokens)[-n_tokens:]\n",
+    "# lowest_R = np.argpartition(R, n_tokens)[:n_tokens]\n",
+    "highest_R = np.argsort(R)[-n_tokens:]\n",
+    "lowest_R = np.argsort(R)[:n_tokens]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1744, 1662, 1666, 1620, 1529,  795, 1386, 1358, 1212, 1143])"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Most positive words:\n",
+    "highest_R"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['han',\n",
+       " 'davies',\n",
+       " 'gilliam',\n",
+       " 'jabba',\n",
+       " 'felix',\n",
+       " 'jimmy',\n",
+       " 'noir',\n",
+       " 'astaire',\n",
+       " 'fanfan',\n",
+       " 'biko']"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp=[v.itos[k] for k in highest_R]\n",
+    "temp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  (360, 0)\t4\n",
+      "  (515, 0)\t14\n"
+     ]
+    }
+   ],
+   "source": [
+    "# number of documents with given \"positive\" words \n",
+    "print(train_doc_term[:,v.stoi[temp[-1]]])\n",
+    "# as suspected, a word with high count in a single document can influence naive bayes prior ratio alot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  (531, 0)\t13\n",
+      "  (735, 0)\t4\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(train_doc_term[:,v.stoi[temp[-2]]]) # same suspicion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 904,  934,  572, 1189, 1213, 1345,  301, 1438, 1545, 1544])"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# most negative words\n",
+    "lowest_R"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['porn',\n",
+       " 'vargas',\n",
+       " 'crap',\n",
+       " 'naschy',\n",
+       " 'dog',\n",
+       " 'crater',\n",
+       " 'worst',\n",
+       " 'disappointment',\n",
+       " 'soderbergh',\n",
+       " 'fuqua']"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp=[v.itos[k] for k in lowest_R]\n",
+    "temp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  (129, 0)\t2\n",
+      "  (135, 0)\t2\n",
+      "  (140, 0)\t1\n",
+      "  (166, 0)\t1\n",
+      "  (183, 0)\t1\n",
+      "  (237, 0)\t3\n",
+      "  (263, 0)\t1\n",
+      "  (329, 0)\t2\n",
+      "  (358, 0)\t3\n",
+      "  (415, 0)\t1\n",
+      "  (765, 0)\t1\n",
+      "  (798, 0)\t6\n"
+     ]
+    }
+   ],
+   "source": [
+    "# number of documents with given \"positive\" words \n",
+    "print(train_doc_term[:,v.stoi[temp[0]]])\n",
+    "# as suspected, a word with high count in a single document can influence naive bayes prior ratio alot"
    ]
   }
  ],
